fixed:FormValidation at newsletter & align at form

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ input, textarea {
 
 .invalid {
   color: #EC1F46;
+  font-weight: 600;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -923,21 +924,24 @@ template {
   position: relative;
   width: 350px;
   height: 55px;
-  border-radius: 4px;
-  overflow: hidden;
 }
 
 .subscribe__input {
-  position: absolute;
-  word-break: break-word;
   width: 100%;
   height: 100%;
   border: none;
+  border-radius: 4px;
   padding-left: 33px;
   padding-right: 75px;
   font-weight: 300;
   font-size: 14px;
   line-height: 18px;
+}
+
+.subscribe__input-group {
+  word-break: break-word;
+  width: 100%;
+  height: 100%;
 }
 
 .subscribe__button {
@@ -951,8 +955,12 @@ template {
   top: 0;
   right: 0;
   border: none;
+  border-radius: 0 4px 4px 0;
   background-color: #EC1F46;
   color: #ffffff;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
   cursor: pointer;
 }
 
@@ -1332,12 +1340,19 @@ template {
   margin-bottom: 23px;
 }
 
+.footer__form {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
 .footer__info {
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
   line-height: 15px;
   color: #E0E0E0;
+  margin-top: 17px;
 }
 
 .footer-bottom {
@@ -1915,10 +1930,13 @@ template {
         -ms-flex-order: 10;
             order: 10;
   }
+  .footer__message {
+    margin-bottom: 15px;
+  }
   .footer__info {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
-    margin-bottom: 15px;
+    margin: 0 0 15px;
   }
   .footer-bottom {
     -ms-flex-wrap: wrap;
