--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -299,9 +299,11 @@
       margin-bottom: 20px
     &__button      
       order: 10
+    &__message
+      margin-bottom: 15px
     &__info
       flex-basis: 100%
-      margin-bottom: 15px
+      margin: 0 0 15px
     &-bottom
       flex-wrap: wrap
       &__text        
