--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -47,3 +47,4 @@ input, textarea
   flex-wrap: wrap
 .invalid
   color: $primary  
+  font-weight: 600  
