--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -64,7 +64,7 @@
     margin-bottom: 22px
   &__link
     text-decoration: none
-    color: inherit    
+    color: inherit      
   &__input
     width: 100%
     &-group
@@ -73,12 +73,15 @@
   &__message
     flex-basis: 100%
     margin-bottom: 23px
+  &__form
+    align-items: start
   &__info
     font-style: normal
     font-weight: bold
     font-size: 12px
     line-height: 15px
     color: #E0E0E0
+    margin-top: 17px
   &-bottom
     display: flex
     justify-content: space-between
