--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -40,20 +40,21 @@
 .subscribe
   position: relative
   width: 350px
-  height: 55px
-  border-radius: 4px
-  overflow: hidden
-  &__input
-    position: absolute
-    word-break: break-word
+  height: 55px      
+  &__input    
     width: 100%
     height: 100%
     border: none
+    border-radius: 4px    
     padding-left: 33px
     padding-right: 75px
     font-weight: 300
     font-size: 14px
     line-height: 18px
+    &-group     
+      word-break: break-word
+      width: 100%
+      height: 100%            
   &__button
     min-width: 65px
     max-width: 110px
@@ -64,8 +65,12 @@
     top: 0
     right: 0
     border: none
+    border-radius: 0 4px 4px 0
     background-color: $primary
     color: $light
+    font-weight: bold
+    font-size: 12px
+    line-height: 15px
     cursor: pointer
   
 
